@@ -1,3 +1,7 @@
+1998-10-17  Tanaka Akira  <morioka@jaist.ac.jp>
+
+	* broken.el (check-broken-facility): New macro.
+
 1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* poe.el (define-obsolete-function-alias): New function.
